# operationcounter

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  operationcounter.py  pyproject.toml  setup.py  sitemap.xml  test_operationcounter.py
accumulators/: index.html
docs/: accumulators.md  index.md  iterators.md  operationcounter.md
iterators/: index.html
operationcounter/: __init__.py  accumulators.py  index.html  iterators.py  operationcounter.py
search/: search_index.json
tests/: test_accumulators.py  test_iterators.py  test_operationcounter.py
